c/src/test/resources/c/mini_bnc/invalid/havocCast_false-valid-assert.c
#include "../../../reserved.h"

int main(){
	int len = (data_t)__VERIFIER_nondet_int();
	ASSERT(len > 0);
	return len;
}
